<?xml version="1.0" encoding="utf-8"?>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        xmlns:android="http://schemas.android.com/apk/res/android" 
        >
        
        <!-- Header starts here -->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <!-- logo starts -->
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/paycollectlogo"/>
            <!-- logo ends -->
            
        </LinearLayout>
        <!-- header ends here -->
        
       
		<ScrollView 
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:fillViewport="true"
    		android:layout_below="@+id/header">  
    		     
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	
        	android:orientation="vertical"
        	android:padding="10dip" >
        
        <TextView android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginBottom="15dp"/>
        
        <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/bankname"/>
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="20dip"
        	android:singleLine="true"
        	android:textStyle="bold"
          	android:id="@+id/thebankname"/>
        
        
        
        
        
        <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/acctname"/>
        <TextView android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="20dip"
        	android:singleLine="true"
        	android:textStyle="bold"
          	android:id="@+id/accountname1"/>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/acctnumber"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:textStyle="bold"
                android:id="@+id/accountnumber1"/>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/amount"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:textStyle="bold"
                android:id="@+id/amount1"/>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/phonenumber"/>
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:textStyle="bold"
                android:id="@+id/phonenumber1"/>
            
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:padding="20dip">
                
                <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/back"
                    android:background="@drawable/backbutton"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:layout_weight="0.5"
                    android:layout_marginTop="10dip"/>
            
            	<Button 
                	android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:id="@+id/submit"
                	android:background="@drawable/submitbutton"
                	android:layout_gravity="center"
                	android:padding="15dp"
                	android:layout_weight="0.5"
                	android:layout_marginTop="10dip"/>
            </LinearLayout>
      
            
    </LinearLayout>
    </ScrollView>
        
        
         <!-- footer starts here -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/footer_repeat"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/footer"
         />
        <!-- footer ends here -->
        
    </RelativeLayout>
