<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" 
    android:background="@drawable/background">
	
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        
        <!-- Header starts here -->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
           	android:layout_marginBottom="40dip"
           	android:layout_alignParentTop="true">
            <!-- logo starts -->
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/paycollectlogo"/>
            <!-- logo ends -->
            
        </LinearLayout>
        <!-- header ends here -->
        
        <!-- footer starts here -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/footer_repeat"
            android:layout_alignParentBottom="true"
            />
        <!-- footer ends here -->
        
        <!-- login form starts -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@+id/header"
            android:layout_marginBottom="20dip"
            android:layout_centerInParent="true">
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/agentid"
                android:textStyle="bold"
                />
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:textStyle="bold"
                android:id="@+id/agentId"
                android:inputType="number"
                android:textColor="@android:color/black"
                />
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/password"
                android:textStyle="bold"
                />
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:id="@+id/password"
                android:textColor="@android:color/black"
                />
            
            <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberme"
                    android:id="@+id/remembermebox"
                    android:checked="true"
                    />

            </RelativeLayout>
            
            <Button android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="20dip"
                android:layout_gravity="center"
                android:background="@drawable/button"
                />
            
            
        </LinearLayout>
        <!-- login form ends -->
        
    </RelativeLayout>
    
</ScrollView>
