<?xml version="1.0" encoding="utf-8"?>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        xmlns:android="http://schemas.android.com/apk/res/android" 
        >
        
        <!-- Header starts here -->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:layout_marginBottom="20dip">
            <!-- logo starts -->
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/paycollectlogo"/>
            <!-- logo ends -->
            
        </LinearLayout>
        <!-- header ends here -->
        
       
		<ScrollView 
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:fillViewport="true"
    		android:layout_below="@+id/header"
    		android:layout_centerInParent="true"
    		android:layout_marginBottom="40dip">  
    		     
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	
        	android:orientation="vertical"
        	android:padding="10dip" 
        	>
        
        	<TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/titledeposit"
                android:layout_marginBottom="30dp"
                android:paddingBottom="20dp"
                android:textStyle="bold"
                android:gravity="center"/>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/acctnumber"
                android:textStyle="bold"
                />
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="number"
                android:textStyle="bold"
                android:id="@+id/accountnumber"/>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/amount"
                android:textStyle="bold"
                />
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:id="@+id/amount"/>
            
            <RadioGroup android:id="@+id/radiocurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">
                <RadioButton android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiocash"
                    android:text="cash"
                    android:checked="true"
                    
                    android:layout_margin="5dp"/>
                
                <RadioButton android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiocheque"
                    android:text="cheque"
                    android:layout_margin="5dp"
                    />
            </RadioGroup>
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:visibility="invisible"
                android:text="Cheque Number"
                android:id="@+id/chequenumbertext"/>
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chequenumberedittext"
                android:visibility="invisible" 
                android:inputType="number"/>             
            
            
            
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/proceed"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_marginTop="20dip"
                android:background="@drawable/button"/>
      		
            
    	</LinearLayout>
    </ScrollView>
        
        
         <!-- footer starts here -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/footer_repeat"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/footer"
         />
        <!-- footer ends here -->
        
    </RelativeLayout>